# ocrpostcorrection

./: .gitignore  Makefile  README.md  bert_vectors_correction_dataset.html  check_tokenization.ipynb  datautils.py  error_correction.html  error_correction_t5.html  error_detection.html  evalTool_ICDAR2017.py  icdar-create-hf-dataset.ipynb  icdar-explore-model-results-task2.ipynb  icdar-explore-model-results.ipynb  icdar-task1-hf-evaluation.ipynb  icdar-task1-hf-train.ipynb  icdar-task2-add-bert-output-to-data.ipynb  icdar-task2-create-dataset.ipynb  icdar-task2-seq2seq-evaluation.ipynb  icdar-task2-train-seq2seq.ipynb  icdar_data.html  icdar_task2_check_input_hidden.ipynb  index.html  index.ipynb  load-data.ipynb  pyproject.toml  results.html  robots.txt  search.json  settings.ini  simple_correction_data.html  sitemap.xml  task1-flair.ipynb  token_classification.html  utils.html
colab/: icdar-task1-hf-evaluation.ipynb  icdar-task1-hf-train.ipynb
local/: icdar-create-hf-dataset.ipynb
nbs/: 00_icdar_data.ipynb  01_error_detection.ipynb  01_task1_token_classification.ipynb  01_token_classification.ipynb  02_error_correction.ipynb  02a_simple_correction_data.ipynb  02b_bert_vectors_correction_dataset.ipynb  02c_error_correction_t5.ipynb  03_results.ipynb  03_utils.ipynb  04_results.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/data/: example.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  model.rar
nbs/data/correction/: bert-vectors.hdf5  dataset.csv
nbs/data/dataset_training_sample/en/eng_sample/: 1.txt  2.txt
nbs/data/dataset_training_sample/fr/fr_sample/: 1.txt  2.txt
nbs/data/icdar_csv/: ed_improvement_inf.csv  ed_improvement_nan.csv
ocrpostcorrection/: _modidx.py  bert_vectors_correction_data.py  error_correction.py  error_correction_t5.py  error_detection.py  icdar_data.py  simple_correction_data.py  task1_token_classification.py  token_classification.py  utils.py
tmp/: 05_development.ipynb
