[tool.poetry]
name = "ocrpostcorrection"
version = "0.1.0"
description = ""
authors = ["Janneke van der Zwaan <jannekevdzwaan@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.10.0"
edlib = "^1.3.9"
loguru = "^0.6.0"
pandas = "^1.5.3"
torch = "^2.0.0"
torchtext = "^0.15.1"
tqdm = "^4.65.0"
transformers = "^4.26.1"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
