[tool.poetry]
name = "ocrpostcorrection"
version = "0.1.0"
description = ""
authors = ["Janneke van der Zwaan <jannekevdzwaan@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
datasets = "^2.10.0"
edlib = "^1.3.9"
loguru = "^0.6.0"
pandas = "^1.5.3"
torch = "^2.0.0"
torchtext = "^0.15.0"
tqdm = "^4.65.0"
transformers = "^4.26.1"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"
pre-commit = "^3.2.0"
poetry2setup = "^1.1.0"
jupyter = "^1.0.0"
notebook = "^6.5.3"
black = "^23.1.0"
nbqa = "^1.6.4"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
